Update to Java language level 10.
And use the new features where pointed out by IDE inspections.